--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,14 @@
 }
 
 .App {
-  /* background-color: rgb(165, 102, 224); */
+  background-color: rgb(165, 102, 224);
   background: rgb(202, 142, 247);
-  background: linear-gradient(9deg, rgba(202, 142, 247, 1) 0%, rgb(178, 90, 255) 42%, rgb(119, 18, 213) 100%);
+  background: linear-gradient(
+    9deg,
+    rgba(202, 142, 247, 1) 0%,
+    rgb(178, 90, 255) 42%,
+    rgb(119, 18, 213) 100%
+  );
   border-radius: 10px;
   margin: 5rem auto 0 auto;
   text-align: center;
@@ -31,7 +36,6 @@ section form input {
   border: 1px solid rgb(185, 151, 216);
   margin: 10px;
 }
-
 
 section ul div {
   display: flex;
